--- a/vet/Css/style.css
+++ b/vet/Css/style.css
@@ -5,7 +5,7 @@ body {
     padding: 20px;
 }
 
-.container {
+.contenedor {
     max-width: 1200px;
     margin: auto;
     background: white;
@@ -41,7 +41,7 @@ button:hover {
     background: #45a049;
 }
 
-table {
+tabla {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
